--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Listen for XDebug",
-            "type": "php",
-            "request": "launch",
-            "port": 9000
-        },
-        {
-            "name": "Launch currently open script",
+            "name": "phpXdebug",
             "type": "php",
             "request": "launch",
             "program": "${file}",
             "cwd": "${fileDirname}",
-            "port": 9000
+            "port": 9000,
+            "runtimeExecutable": "c://xampp/php/php.exe"
         }
     ]
 }
